Trying to fix app desc size on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,8 +25,8 @@
 .splash-desc {
   font-family: "Roboto", sans-serif;
   font-family: "Roboto Mono", monospace;
-  font-size: 12px;
-  max-width: 50%;
+  font-size: 10px;
+  max-width: 200px;
   color: #deb992;
 }
 /* ****************************** */
